--- a/public/res/styles.css
+++ b/public/res/styles.css
@@ -16,6 +16,7 @@ body {
 
 header {
   width: 100%;
+  height: 20px;
   position: fixed;
   display: inline-block;
   box-sizing: border-box;
@@ -23,19 +24,18 @@ header {
   left: 0;
   background-color: #333;
   color: #FFF;
-  padding: 5px;
+  padding: 0 5px;
   z-index: 9999;
 }
 
-h1 {
-  font-size: 35px;
-  line-height: 35px;
-  padding: 0;
-  margin: 0;
+header * {
+  font-size: 18px;
+  line-height: 20px;
 }
 
 h1, h2, h3, h4 {
   margin: 0;
+  padding: 0;
 }
 
 .title {
@@ -43,10 +43,7 @@ h1, h2, h3, h4 {
 }
 
 .score {
-  font-size: 18px;
   float: right;
-  max-width: 150px;
-  line-height: 35px;
 }
 
 *:focus {
@@ -85,4 +82,27 @@ h1, h2, h3, h4 {
 
 .play-button:focus, .play-button:active {
   background-color: #000;
+}
+
+.warning {
+  position: absolute;
+  left: 0;
+  bottom: 12px;
+  width: 100%;
+  color: red;
+}
+
+.inputBox {
+  box-sizing: border-box;
+  width: 100%;
+  border: 2px solid black;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 18px;
+}
+
+.red {
+  border: 2px solid red;
+  background-color: #FCC;
 }
