--- a/public/templates/game.html
+++ b/public/templates/game.html
@@ -1,6 +1,6 @@
 <div class="centered-content">
   <div class="stage">
-    <p class="emoji-block" ng-repeat="emote in emojiLog">{{emote}}</p>
+    <p class="emoji-block" ng-repeat="emote in emojiLog track by $index">{{emote}}</p>
   </div>
   <div class="timer"></div>
   <p class="warning" ng-hide="isOnlyEmoji(emojis)">You may only use Emojis!</p>
