--- a/public/res/styles.css
+++ b/public/res/styles.css
@@ -60,17 +60,23 @@ h1, h2, h3, h4 {
 
 .button {
   background-color: #333;
-  height: 48px;
   width: 60%;
   display: block;
   border-radius: 5px;
   border: 0;
   margin: 10px auto;
+  padding: 5px;
+  box-sizing: border-box;
 
   color: #FFF;
   font-size: 36px;
-  line-height: 48px;
   text-decoration: none;
+}
+
+.l-button {
+  height: auto;
+  font-size: 24px;
+  line-height: 24px;
 }
 
 .play-button {
@@ -82,6 +88,27 @@ h1, h2, h3, h4 {
 
 .play-button:focus, .play-button:active {
   background-color: #F06;
+}
+
+.notification {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: opacity .3s linear;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.visible {
+  opacity: 1 !important;
+  pointer-events: all;
 }
 
 .warning {
