--- a/public/templates/game.html
+++ b/public/templates/game.html
@@ -3,6 +3,8 @@
     <p class="emoji-block" ng-repeat="emote in emojiLog track by $index">{{emote}}</p>
   </div>
   <div class="timer"></div>
+  <a class="button correct" ng-show="currentAsker === you">CORRECT!</a>
+  <a class="button skip" ng-show="currentAsker === you">SKIP</a>
   <p class="warning" ng-hide="isOnlyEmoji(emojis)">You may only use Emojis!</p>
   <form class="guess" ng-submit="submitGuess()">
     <input type="text" class="inputBox guessBox" ng-model="guess" ng-keypress="typeInput($event)" ng-show="currentAsker !== you && ready">
@@ -12,11 +14,13 @@
 
 <!-- results screen -->
 
-<div class="notification" ng-class="{visible: results.who}">
+<div class="notification" ng-class="{visible: results.username}">
+  <h3>{{results.username}} correctly guessed {{results.answer}} for {{results.points}} points!</h3>
 </div>
 
 <!-- movie selection screen -->
 
 <div class="notification" ng-class="{visible: movieChoices.length}">
+  <h3>Select a movie when you're ready to begin:</h3>
   <a class="button l-button" ng-repeat="choice in movieChoices track by $index" ng-click="selectMovie($index)">{{choice}}</a>
 </div>
