--- a/public/templates/game.html
+++ b/public/templates/game.html
@@ -4,6 +4,7 @@
   </div>
   <div class="timer"></div>
   <a class="button correct" ng-show="currentAsker === you && ready" ng-click="ready = false">CORRECT!</a>
+  <a class="button hint" ng-show="currentAsker === you && ready" ng-click="giveHint()" ng-class="{inactive: !hintsLeft}">HINT x {{hintsLeft}}</a>
   <a class="button skip" ng-show="currentAsker === you && ready" ng-click="skipRound()">SKIP</a>
   <p class="warning" ng-hide="isOnlyEmoji(emojis)">You may only use Emojis!</p>
   <form class="guess" ng-submit="submitGuess()">
