--- a/public/res/styles.css
+++ b/public/res/styles.css
@@ -184,3 +184,13 @@ h1, h2, h3, h4 {
   margin: 0;
   font-size: 40px;
 }
+
+.hint-block {
+  display: block;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 0;
+  font-size: 30px;
+  letter-spacing: 5px;
+  padding: 10px;
+  padding-top: 30px;
+}
