--- a/res/styles.scss
+++ b/res/styles.scss
@@ -1,3 +1,20 @@
+@mixin cartoonBorder ($color) {
+  border: 3px solid mix($color, #000, 60%);
+  border-radius: 10px;
+  @include linearGradient($color, mix($color, #703, 80%));
+}
+
+@mixin linearGradient ($top, $bottom) {
+  background: $top; /* Old browsers */
+  background: -moz-linear-gradient(top,  $top 0%, $bottom 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  $top 0%,$bottom 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  $top 0%,$bottom 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  $top 0%,$bottom 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  $top 0%,$bottom 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+}
+
 html {
   font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
   height: 100%;
@@ -71,6 +88,40 @@ h1, h2, h3, h4 {
   color: #FFF;
   font-size: 36px;
   text-decoration: none;
+
+  .correct {
+    position: absolute;
+    margin: 0;
+    left: 0;
+    top: 0;
+    width: 33.3%;
+    font-size: 16px;
+    background-color: #F06;
+  }
+
+  .hint {
+    position: absolute;
+    margin: 0;
+    left: 33.3%;
+    top: 0;
+    width: 33.3%;
+    font-size: 16px;
+    background-color: #39F;
+  }
+
+  .skip {
+    position: absolute;
+    margin: 0;
+    right: 0;
+    top: 0;
+    width: 33.3%;
+    font-size: 16px;
+    background-color: #999;
+  }
+
+  .inactive {
+    opacity: 0.4;
+  }
 }
 
 .l-button {
@@ -81,14 +132,15 @@ h1, h2, h3, h4 {
 }
 
 .play-button {
+  @include cartoonBorder(#69F);
   position: absolute;
   top: 50%;
   margin-top: -24px;
   left: 20%;
-}
 
-.play-button:focus, .play-button:active {
-  background-color: #F06;
+  *:focus, *:active {
+    background-color: #F06;
+  }
 }
 
 .notification {
@@ -120,53 +172,24 @@ h1, h2, h3, h4 {
   color: #F06;
 }
 
-.correct {
-  position: absolute;
-  margin: 0;
-  left: 0;
-  top: 0;
-  width: 33.3%;
-  font-size: 16px;
-  background-color: #F06;
-}
+.guess {
+  display: flex;
 
-.hint {
-  position: absolute;
-  margin: 0;
-  left: 33.3%;
-  top: 0;
-  width: 33.3%;
-  font-size: 16px;
-  background-color: #39F;
-}
+  .input-box {
+    box-sizing: border-box;
+    border: 2px solid black;
+    font-size: 20px;
 
-.skip {
-  position: absolute;
-  margin: 0;
-  right: 0;
-  top: 0;
-  width: 33.3%;
-  font-size: 16px;
-  background-color: #999;
-}
+    .red {
+      border: 2px solid #F06;
+      background-color: #FCD;
+    }
+  }
 
-.inactive {
-  opacity: 0.4;
-}
-
-.inputBox {
-  box-sizing: border-box;
-  width: 100%;
-  border: 2px solid black;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  font-size: 20px;
-}
-
-.red {
-  border: 2px solid #F06;
-  background-color: #FCD;
+  .send {
+    min-width: 20px;
+    width: 10%;
+  }
 }
 
 .stage {
@@ -177,21 +200,21 @@ h1, h2, h3, h4 {
   left: 20px;
   right: 20px;
   z-index: -1;
-}
 
-.emoji-block {
-  display: block;
-  text-align: left;
-  margin: 0;
-  font-size: 40px;
-}
+  .emoji-block {
+    display: block;
+    text-align: left;
+    margin: 0;
+    font-size: 40px;
+  }
 
-.hint-block {
-  display: block;
-  background-color: rgba(255, 255, 255, 0.8);
-  margin: 0;
-  font-size: 30px;
-  letter-spacing: 5px;
-  padding: 10px;
-  padding-top: 30px;
+  .hint-block {
+    display: block;
+    background-color: rgba(255, 255, 255, 0.8);
+    margin: 0;
+    font-size: 30px;
+    letter-spacing: 5px;
+    padding: 10px;
+    padding-top: 30px;
+  }
 }
