--- a/res/styles.scss
+++ b/res/styles.scss
@@ -1,13 +1,12 @@
 @mixin cartoonButton ($color) {
   color: #FFF;
-  border: 1px solid black;
   border-radius: 3px;
   margin: 6px 4px 9px 1px;
-  box-shadow: rgba(0, 0, 0, 0.4) 4px 4px;
+  box-shadow: rgba(0, 0, 0, 0.3) 4px 4px;
   @include linearGradient($color, mix($color, #703, 80%));
 
   &:active {
-    box-shadow: rgba(0, 0, 0, 0.4) 4px 4px inset;
+    box-shadow: rgba(0, 0, 0, 0.2) 4px 4px inset;
     margin: 9px 1px 6px 4px;
   }
 }
@@ -47,9 +46,8 @@ header {
   box-sizing: border-box;
   top: 0;
   left: 0;
-  background-color: orange;
+  @include linearGradient(#FB3, mix(#FB3, #703, 80%));
   color: #FFF;
-  border-bottom: 1px solid black;
   box-shadow: rgba(0, 0, 0, 0.4) 0 4px;
   padding: 0 5px;
   z-index: 9999;
@@ -124,17 +122,17 @@ h1, h2, h3, h4 {
   flex-direction: row;
 
   .correct {
-    @include cartoonButton(green);
+    @include cartoonButton(#5D5);
     font-size: 16px;
   }
 
   .hint {
-    @include cartoonButton(orange);
+    @include cartoonButton(#FB3);
     font-size: 16px;
   }
 
   .skip {
-    @include cartoonButton(gray);
+    @include cartoonButton(#999);
     font-size: 16px;
   }
 }
@@ -161,9 +159,11 @@ h1, h2, h3, h4 {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
-  position: absolute;
+  position: fixed;
+  box-sizing: border-box;
   top: 0;
   left: 0;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -194,7 +194,8 @@ h1, h2, h3, h4 {
 
   .input-box {
     box-sizing: border-box;
-    border: 2px solid black;
+    border: 2px solid #333;
+    border-radius: 3px;
     font-size: 20px;
     flex: 4;
     margin: 6px;
@@ -209,6 +210,7 @@ h1, h2, h3, h4 {
     @include cartoonButton(#69F);
     font-size: 16px;
     min-width: 60px;
+    border: 0;
     flex: 1;
   }
 }
@@ -227,5 +229,6 @@ h1, h2, h3, h4 {
     text-align: left;
     margin: 0;
     font-size: 40px;
+    line-height: 40px;
   }
 }
