--- a/res/styles.scss
+++ b/res/styles.scss
@@ -3,7 +3,7 @@
   border-radius: 3px;
   margin: 6px 4px 9px 1px;
   box-shadow: rgba(0, 0, 0, 0.3) 4px 4px;
-  @include linearGradient($color, mix($color, #703, 80%));
+  @include linearGradient($color, mix($color, #506, 60%));
 
   &:active {
     box-shadow: rgba(0, 0, 0, 0.2) 4px 4px inset;
@@ -24,6 +24,7 @@
 
 html {
   font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+  text-rendering: optimizeLegibility;
   height: 100%;
   min-height: 100%;
 }
@@ -48,7 +49,7 @@ header {
   left: 0;
   @include linearGradient(#FB3, mix(#FB3, #703, 80%));
   color: #FFF;
-  box-shadow: rgba(0, 0, 0, 0.4) 0 4px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 4px;
   padding: 0 5px;
   z-index: 9999;
 }
@@ -101,14 +102,13 @@ h1, h2, h3, h4 {
 .button {
   @include cartoonButton(#69F);
 
-  background-color: #333;
   width: 60%;
   display: block;
-  padding: 5px;
   box-sizing: border-box;
 
   font-size: 36px;
   text-decoration: none;
+  padding: 3px;
 
   &.inactive {
     opacity: 0.4;
@@ -122,7 +122,7 @@ h1, h2, h3, h4 {
   flex-direction: row;
 
   .correct {
-    @include cartoonButton(#5D5);
+    @include cartoonButton(#6E6);
     font-size: 16px;
   }
 
@@ -144,14 +144,25 @@ h1, h2, h3, h4 {
   line-height: 24px;
 }
 
-.play-button {
-  @include cartoonButton(#69F);
-  position: absolute;
-  top: 50%;
-  left: 20%;
+.splash {
+  @include linearGradient(#FFF, #CFF);
+  .play {
+    @include cartoonButton(#6FD);
+    line-height: 60px;
+    font-size: 50px;
+    font-weight: 800;
+  }
 
-  *:focus, *:active {
-    background-color: #F06;
+  .rules {
+    @include cartoonButton(#999);
+    font-size: 32px;
+    width: 55%;
+  }
+
+  .credits {
+    @include cartoonButton(#999);
+    font-size: 32px;
+    width: 55%;
   }
 }
 
