--- a/public/templates/splash.html
+++ b/public/templates/splash.html
@@ -6,17 +6,16 @@
 
 <div class="notification" ng-class="{visible: showRules}" ng-click="toggleRules()" style="text-align:left">
   <h1>Rules:</h1>
-  <p><b>Emojinary Movies</b> is designed as a same-room party game. That means it is meant to be played together with lots of friends in the same place.</p>
-  <p>The main player picks from a list of 3 randomly selected movies and has to describe or act it out using ONLY EMOJI. The other players all shout out their guesses at once. Once a player guesses correctly, the main player presses the "correct" button and awards that player their points. Points for a round are based on the number of hints given before a winner is chosen.</p>
-  <p>Important side note: Technically, <b>Emojinary Movies</b> will work remotely and accept typed guesses in the input box at the bottom but this is not recommended. You'll probably have to make heavy use of the hint system to make sure people are typing the title exactly correctly. A solution to this is in the works.</p>
+  <p><b>Emojinary Movies</b> is a same-room party game. That means it is meant to be played together with lots of friends in the same place. You will each need your phone to play.</p>
+  <p>The main player picks from a list of 3 randomly selected movies and has to describe or act it out using ONLY EMOJI. The other players try to guess the movie at the same time. Once a player guesses correctly, the main player presses the "correct" button and awards that player their points. Points for a round are based on the number of hints given before a winner is chosen. Turns progress from there in the order players joined.</p>
+  <p>Important note: Technically, <b>Emojinary Movies</b> will work remotely and accept typed guesses in the input box at the bottom but this is not recommended. You'll probably have to make heavy use of the hint system to make sure people are typing the title exactly correctly. A solution to this is in the works.</p>
 </div>
 <div class="notification" ng-class="{visible: showCredits}" ng-click="toggleCredits()">
-  <h1>EMOJINARY MOVIES</h1>
-  <h3>v0.3</h3>
+  <h1>EMOJINARY MOVIES v0.3</h3>
   <br />
   <h3>Programming: Eric Hannum</h3>
   <h3>Design: Eric Hannum</h3>
   <h3>Basically all of it: Eric Hannum</h3>
   <br />
-  <h3>Thank you so much for playing my game. You may have noticed it's all made by one person so sorry if the development is a bit slow. If you have any suggestions, questions, or comments, or if you just want to hear me talk about how stupid I was for trying to make an emoji based project in javascript dispite being <a href="https://www.youtube.com/watch?v=tITwM5GDIAI">explicitely warned not to</a> you can email me personally by <a href="mailto:ehannum@gmail.com">clicking right here</a>.</h3>
+  <p>Thank you so much for playing my game. You may have noticed it's all made by one person so sorry if the development is a bit slow. If you have any suggestions, questions, or comments, or if you just want to hear me talk about how stupid I was for trying to make an emoji based project in javascript dispite being <a href="https://www.youtube.com/watch?v=tITwM5GDIAI">explicitely warned not to</a> you can email me personally by <a href="mailto:ehannum@gmail.com">clicking right here</a>.</p>
 </div>
