added logo to splash screen

--- a/public/templates/splash.html
+++ b/public/templates/splash.html
@@ -1,4 +1,5 @@
 <div class="notification visible splash">
+  <img src="res/logo.png" alt="MOJIES" class="logo">
   <a class="button play" ng-click="play()">PLAY</a>
   <a class="button rules" ng-click="toggleRules()">RULES</a>
   <a class="button credits" ng-click="toggleCredits()">CREDITS</a>
