changed name from "emojinary movies" to "mojies"... I still don't like it.

--- a/public/templates/splash.html
+++ b/public/templates/splash.html
@@ -7,12 +7,12 @@
 
 <div class="notification" ng-class="{visible: showRules}" ng-click="toggleRules()" style="text-align:left">
   <h1>Rules:</h1>
-  <p><b>Emojinary Movies</b> is a same-room party game. That means it is meant to be played together with lots of friends in the same place. You will each need your phone to play.</p>
+  <p><b>MOJIES</b> is a same-room party game. That means it is meant to be played together with lots of friends in the same place. You will each need your phone to play.</p>
   <p>The main player picks from a list of 3 randomly selected movies and has to describe or act it out using ONLY EMOJI. The other players try to guess the movie at the same time. Once a player guesses correctly, the main player presses the "correct" button and awards that player their points. Points for a round are based on the number of hints given before a winner is chosen. Turns progress from there in the order players joined.</p>
-  <p>Important note: Technically, <b>Emojinary Movies</b> will work remotely and accept typed guesses in the input box at the bottom but this is not recommended. You'll probably have to make heavy use of the hint system to make sure people are typing the title exactly correctly. A solution to this is in the works.</p>
+  <p>Important note: Technically, <b>MOJIES</b> will work remotely and accept typed guesses in the input box at the bottom but this is not recommended. You'll probably have to make heavy use of the hint system to make sure people are typing the title exactly correctly. A solution to this is in the works.</p>
 </div>
 <div class="notification" ng-class="{visible: showCredits}" ng-click="toggleCredits()">
-  <h1>EMOJINARY MOVIES v0.3</h3>
+  <h1>MOJIES v0.3</h3>
   <br />
   <h3>Programming: Eric Hannum</h3>
   <h3>Design: Eric Hannum</h3>
