--- a/res/styles.scss
+++ b/res/styles.scss
@@ -119,6 +119,7 @@ h1, h2, h3, h4 {
   margin: 0;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
 
   .correct {
     @include cartoonButton(#6E6);
@@ -240,6 +241,7 @@ h1, h2, h3, h4 {
   box-sizing: border-box;
   padding: 20px;
   position: absolute;
+  word-wrap: break-word;
   bottom: 20px;
   left: 20px;
   right: 20px;
